@@ -222,10 +222,10 @@ class CustomerPickupCounterBlockEntityTest {
                                 );
 
         assertEquals(2, offers.size());
-        assertEquals(firstSpawner, offers.getFirst().spawner());
-        assertEquals(firstOffer, offers.getFirst().offer());
-        assertEquals(secondSpawner, offers.getLast().spawner());
-        assertEquals(secondOffer, offers.getLast().offer());
+        assertEquals(firstSpawner, offers.get(0).spawner());
+        assertEquals(firstOffer, offers.get(0).offer());
+        assertEquals(secondSpawner, offers.get(offers.size() - 1).spawner());
+        assertEquals(secondOffer, offers.get(offers.size() - 1).offer());
     }
 
     @Test
@@ -362,7 +362,7 @@ class CustomerPickupCounterBlockEntityTest {
 
         assertTrue(remainder.isEmpty());
         assertEquals(1, counter.getDisplayItems().size());
-        assertEquals(32, counter.getDisplayItems().getFirst().getCount());
+        assertEquals(32, counter.getDisplayItems().get(0).getCount());
     }
 
     @Test
@@ -386,7 +386,7 @@ class CustomerPickupCounterBlockEntityTest {
 
         assertTrue(remainder.isEmpty());
         assertEquals(1, counter.getDisplayItems().size());
-        assertEquals(32, counter.getDisplayItems().getFirst().getCount());
+        assertEquals(32, counter.getDisplayItems().get(0).getCount());
     }
 
     @Test
@@ -411,7 +411,7 @@ class CustomerPickupCounterBlockEntityTest {
 
         assertTrue(remainder.isEmpty());
         assertEquals(1, counter.getDisplayItems().size());
-        assertEquals(32, counter.getDisplayItems().getFirst().getCount());
+        assertEquals(32, counter.getDisplayItems().get(0).getCount());
     }
 
     @Test
@@ -627,8 +627,8 @@ class CustomerPickupCounterBlockEntityTest {
                 );
 
         assertEquals(1, stacks.size());
-        assertEquals(20, stacks.getFirst().stack().getCount());
-        assertEquals(crafterId, stacks.getFirst().crafterId());
+        assertEquals(20, stacks.get(0).stack().getCount());
+        assertEquals(crafterId, stacks.get(0).crafterId());
     }
 
     @Test
@@ -645,8 +645,8 @@ class CustomerPickupCounterBlockEntityTest {
                 );
 
         assertEquals(1, stacks.size());
-        assertEquals(15, stacks.getFirst().stack().getCount());
-        assertEquals(crafterId, stacks.getFirst().crafterId());
+        assertEquals(15, stacks.get(0).stack().getCount());
+        assertEquals(crafterId, stacks.get(0).crafterId());
     }
 
     @Test
